--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Block Miner</title>
 
   </head>
-  <body style="background-color: black">
+  <body class="body">
     <main>
       <div class="index">
       <h1>Want to play a game?</h1>
